fix(incoming-task): fix-incoming-task-overflow-issue-using-ellipsis

--- a/packages/contact-center/cc-components/src/components/task/CallControlCAD/call-control-cad.styles.scss
+++ b/packages/contact-center/cc-components/src/components/task/CallControlCAD/call-control-cad.styles.scss
@@ -118,8 +118,68 @@
   }
 }
 
-.customer-name::part(text),
-.phone-number::part(text) {
-  white-space: normal !important;
-  word-break: break-all;
+.digital-customer-name::part(text),
+.voice-customer-name::part(text),
+.digital-phone-number::part(text),
+.voice-phone-number::part(text) {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 0;
+}
+
+.digital-customer-name {
+   width: auto; 
+}
+
+.digital-phone-number {
+   width: auto;
+}
+
+@media (min-width: 64.0625rem) and (max-width: 75rem) {
+  .digital-customer-name {
+    width: 50rem;
+    max-width: 50rem;
+  }
+
+  .digital-phone-number {
+    width: 16rem;
+    max-width: 16rem;
+  }
+}
+
+@media (min-width: 48.0625rem) and (max-width: 64rem) {
+  .digital-customer-name {
+    width: 31.25rem;
+    max-width: 31.25rem;
+  }
+
+  .digital-phone-number {
+    width: 15rem;
+    max-width: 15rem;
+  }
+}
+
+@media (min-width: 30.0625rem) and (max-width: 48rem) {
+  .digital-customer-name {
+    width: 15.625rem;
+    max-width: 15.625rem;
+  }
+
+  .digital-phone-number {
+    width: 13rem;
+    max-width: 13rem;
+  }
+}
+
+@media (min-width: 20rem) and (max-width: 30.0625rem) {
+  .digital-customer-name {
+    width: 9.375rem;
+    max-width: 9.375rem;
+  }
+
+  .digital-phone-number {
+    width: 12rem;
+    max-width: 12rem;
+  }
 }
